<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/teamSettings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings_show_all_player_team"
            android:orderInCategory="100"
            android:title="@string/menu_settings_show_all_player"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings_show_own_team_only_team"
            android:orderInCategory="100"
            android:title="@string/menu_settings_show_only_own_team"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings_show_not_assigned_team"
            android:orderInCategory="100"
            android:title="@string/menu_settings_show_only_unassigned"
            app:showAsAction="never" />
    </group>
</menu>